2014-05-11  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: clear_margin_area() is called in x_window_resize() which
	  is called from x_im_{status|candidate}_screen.c

2014-05-11  Araki Ken  <arakiken@users.sf.net>

	* x_display_linux.c:
	  - strstr() in get_event_device_num() is replaced by strcasestr().
	  - If get_event_device_num() doesn't find kbd or mouse input event
	    devices, it returns the default number of kbd or mouse device
	    instead of -1.

	* fb/x_window.c: x_display_check_visibility_of_im_window() is called
	  not only from x_window_move() but also from x_window_resize().

	* fb/x_display.c: The bug of clearing input method window unexpectedly
	  in receive_event_for_multi_roots() is fixed.

	* im_fcitx.c: Preedit text is drawn before candidate window in order
	  not to clear candidate window by preedit text at the corner of the
	  window.

2014-05-10  Araki Ken  <arakiken@users.sf.net>

	* x_im_status_screen.c: draw_screen() wraps and draws status characters
	  in multiple lines.

	* README, man/mlterm.1, README.ja: Updated.

	* im_fcitx.c: fcitx plugin works on framebuffer.

2014-05-10  Araki Ken  <arakiken@users.sf.net>

	* x_im.c: Segmentation fault in exiting with fcitx is fixed.

	* im_fcitx.c: connection_handler() is registerd to x_event_source
	  only if the initialization of fcitx succeeds.

	* im_ibus.c: Minor fixes.

2014-05-10  Araki Ken  <arakiken@users.sf.net>

	* inputmethod/fcitx: Added.

	* configure.in: --enable-fcitx option is added.

2014-05-05  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: The hack of continuing sixel sequence by FF, GS, RS and US
	  after ST is removed.

	* x_draw_str.c: INLINEPIC_ID and INLINEPIC_POS are defined. (Not in x_picture.h)

	* x_picture.c, x_screen.c: Following macros in ml_char.h are used.

	* ml_char.h:
	  - PICTURE_ID_BITS and PICTURE_POS_BITS are defined. (Not in x_picture.h)
	  - ml_char_combine_picture(), ml_char_picture_id() and ml_char_set_picture_id()